GUI-1491: Reduce nav item right/left padding by 1px to prevent unexpected wrapping of IAM menu on IE

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -211,6 +211,8 @@ h1, h2, h3, h4, h5, h6 {
     .top-bar-section ul li > a {
         font-family: Oswald, Helvetica, Arial, sans-serif;
         font-size: 1.2rem;
+        padding-left: 14px;
+        padding-right: 14px;
     }
     border-top: 1px solid black;
     border-bottom: 1px solid black;
